# pluto

./: .gitignore  .gitmodules  .windsurfrules  CLAUDE.md  NEPTUNE_MIGRATION.md  README.md  TMP_INFO.md  dev-install.sh  format.sh  pluto_wandb_hook.pth  pyproject.toml  requirements.txt  test_tags_unit.py  zzzz_pluto_wandb_hook.pth
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
design/: bak.banner.afdesign  favicon.afdesign  logo.afdesign  logo_dark.afdesign  read-query-api.md
docs/: SYNC_PROCESS_DESIGN.md  SYNC_PROCESS_V2_ARCHITECTURE.md  docusaurus.config.js  package-lock.json
docs-api/: README.md  config.mdx  data.mdx  initialization.mdx  media.mdx  meta.json  query.mdx  run.mdx
examples/: intro.ipynb  neptune_migration_README.md  neptune_migration_example.py  torch.ipynb
mlop/: __init__.py  __main__.py  api.py  auth.py  file.py  iface.py  init.py  log.py  op.py  ops.py  sets.py  store.py  sys.py  util.py
patches/: konduktor-fix-node-selector.patch
pluto/: __init__.py  __main__.py  _fd_capture.py  _fs.py  _wandb_hook.py  api.py  auth.py  file.py  iface.py  init.py  log.py  nccl_ras.py  op.py  query.py  sanitize.py  sentry.py  sets.py  store.py  sys.py  util.py
scripts/: gen_api_docs.py  repro_filter_name_scope.py  test_neptune_migration.sh  wandb_coverage.py
tests/: .gitignore  README.md  README_NEPTUNE_TESTS.md  all.py  args.py  audio.py  cnn-mnist.py  conftest.py  fork_integration_test.py  image.py  manual_fork_chain.py  message.py  metric.py  polynomial.py  quickstart.py  requirements.txt  table.py  test.sh  test_artifact_uploads.py  (+52 more)
(+82 files in other folders)
