[tool.poetry]
name = "trainy-mlop"
version = "0.0.2"
description = "Trainy MLOp"
packages = [
    {include = "mlop"}
]
authors = [
    "jqssun",
    "lakeesiv",
    "asaiacai"
]
readme = "README.md"
license-files = [ "LICENSE" ]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = ">=3.1"
httpx = { extras = ["http2"], version = ">=0.24" }
keyring = ">=24.0"
keyrings-alt = ">=5.0"
pillow = ">=10.0"
psutil = ">=5.9"
pynvml = ">=11.5"
rich = ">=13.0"
soundfile = ">=0.12"


[tool.poetry.optional-dependencies]
full = [
  "pynvml",
]

[tool.poetry.scripts]
mlop = 'mlop:__main__.main'
